Updated Rental with ids
